--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,24 +49,24 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    def room_version = "2.2.1"
+    def room_version = "2.4.2"
     def kodein_version = "6.4.0"
-    def lifecycle_version = "2.0.0"
+    def lifecycle_version = "2.2.0"
 
     // Room and Architectural Components
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
-    implementation "androidx.room:room-ktx:2.2.1"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+    implementation "androidx.room:room-ktx:2.4.2"
     kapt "androidx.room:room-compiler:$room_version"
 
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
 
     // New Material Design
-    implementation "com.google.android.material:material:1.0.0"
+    implementation "com.google.android.material:material:1.5.0"
 
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
